imwiz-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: imwiz 
  labels:
    name: imwiz
