test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    #ingress.kubernetes.io/ssl-passthrough: "true"
    #nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    #nginx.org/ssl-services: kubernetes-dashboard
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_cache imwiz;
      proxy_cache_key   $uri$is_args$args$http_accept;
      #proxy_cache_key   $uri$is_args$args$slice_range$http_accept;
      #proxy_set_header  Range $slice_range;
      proxy_cache_valid 200 206 10m;
      add_header X-Cache-Status $upstream_cache_status;
  generation: 3
  name: imwiz-ingress
  namespace: imwiz 
spec:
  ingressClassName: nginx
  rules:
  - host: "imwiztest.cloud-testing.io" 
    http:
      paths:
      - backend:
          service:
            name: imagetransfrom-service
            port:
              number: 8000
        path: /
        pathType: Prefix
        #tls:
    #- hosts:
    #- imwiztest.cloud-testing.io
    #secretName: letsencrypt-prod
